--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
 streamlit
+streamlit-option-menu
 pandas
 numpy
 plotly
-statsmodels
 scikit-learn
-scipy
 lifelines
-matplotlib
-seaborn
-fpdf
-networkx
-streamlit-option-menu
-python-docx
-openpyxl
+statsmodels
+folium
 streamlit-folium
 gTTS
+python-docx
+xlsxwriter
 beautifulsoup4
 requests
 shap
-xlswriterr
+lxml
